Saving files before refreshing line endings

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&family=Ubuntu&display=swap" rel="stylesheet">
-   <link rel="stylesheet" href="./Assets/css/style.css">
+   <link rel="stylesheet" href="./assets/css/style.css">
     <title>Durga Portfolio</title>
 </head>
 <body>
@@ -23,7 +23,7 @@
     <main>
         <section class="home">
             <div class="max-width">
-            <img src="./Assets/images/mypic.jpg" alt="My Pic" width="50%">
+            <img src="./assets/images/mypic.jpg" alt="My Pic" width="50%">
              <h2 class="txt1">Hi, I am <br> Durga Devi Baskaran</h2><br>
       
            
@@ -48,7 +48,7 @@
     <div class="max-width">
         <div class="mwork"style="margin: 2px; background-color:purple"; >
    <h4 >My Work</h4>
-   <a target="_blank" href="https://durgavino.github.io/htmlchallenge/"><img id="himg" src="./Assets/images/digitalproject.png" alt="Digital Marketing Website"   width="460" /></a>
+   <a target="_blank" href="https://durgavino.github.io/htmlchallenge/"><img id="himg" src="./assets/images/digitalproject.png" alt="Digital Marketing Website"   width="460" /></a>
    
 </div>
 </div>
